--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TailwindCss Learning</title>
-    <link rel="stylesheet" href="tailwindcss.css">
-</head>
-<body class="bg-slate-500">
-    <h1 class="font-black text-9xl italic text-black">Hello Tailwindcss</h1>
-</body>
+    <link rel="stylesheet" href="tailwindcss.css" />
+  </head>
+  <body>
+
+    <div class="card flex m-5 items-center text-center justify-center ">
+        <div class="card-title bg-white max-w-screen-sm boder shadow-md p-5 border border-gray-400 rounded hover:bg-gray-400">
+            <h2 class="text-3xl font-black shadow-sm underline italic font-serif">Web Developer</h2>
+            <p class="justify-between leading-normal font-sans text-2xl text-gray-600 hover:dark:text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, corrupti!</p>
+        </div>
+    </div>
+  </body>
 </html>
